--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,19 @@
-@import "https://fonts.googleapis.com/css?family=Montserrat:300, 400, 700&display=swap";
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
+
 html {
   font-size: 10px;
-  font-family: "Montserrat", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
 }
+
 a {
   text-decoration: none;
 }
+
 .container {
   min-height: 100vh;
   width: 100%;
@@ -19,11 +21,13 @@ a {
   align-items: center;
   justify-content: center;
 }
+
 img {
   height: 100%;
   width: 100%;
   object-fit: cover;
 }
+
 p {
   color: black;
   font-size: 1.4rem;
@@ -32,6 +36,7 @@ p {
   /* font-weight: 400; */
   letter-spacing: 0.05rem;
 }
+
 .section-title {
   font-size: 4rem;
   /* font-weight: 300; */
@@ -41,6 +46,7 @@ p {
   letter-spacing: 0.2rem;
   text-align: center;
 }
+
 .section-title span {
   color: #ff0000;
 }
@@ -51,6 +57,7 @@ p {
   color: white;
   background-color: transparent;
   border: 2px solid #ff0000;
+  border-radius: 7px;
   font-size: 2rem;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
@@ -58,10 +65,11 @@ p {
   transition: 0.3s ease;
   transition-property: background-color, color;
 }
+
 .cta:hover,
 .cta-2:hover {
   color: white;
-  background-color: #ff0000;
+  background-color: #000080;
 }
 
 .cta-2 {
@@ -70,6 +78,7 @@ p {
   color: white;
   background-color: transparent;
   border: 2px solid #ff0000;
+  border-radius: 7px;
   font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
@@ -84,6 +93,7 @@ p {
   text-transform: uppercase;
   color: white;
 }
+
 .brand h1 span {
   color: #ff0000;
 }
@@ -97,11 +107,13 @@ p {
   width: 100vw;
   height: auto;
 }
+
 #header .header {
   min-height: 8vh;
   background-color: rgba(31, 30, 30, 0.24);
   transition: 0.3s ease background-color;
 }
+
 #header .nav-bar {
   display: flex;
   align-items: center;
@@ -111,6 +123,7 @@ p {
   max-width: 1300px;
   padding: 0 10px;
 }
+
 #header .nav-list ul {
   list-style: none;
   position: absolute;
@@ -127,9 +140,11 @@ p {
   overflow-x: hidden;
   transition: 0.5s ease left;
 }
+
 #header .nav-list ul.active {
   left: 0%;
 }
+
 #header .nav-list ul a {
   font-size: 2.5rem;
   font-weight: 500;
@@ -140,6 +155,7 @@ p {
   padding: 20px;
   display: block;
 }
+
 #header .nav-list ul a::after {
   content: attr(data-after);
   position: absolute;
@@ -152,13 +168,16 @@ p {
   z-index: -1;
   transition: 0.3s ease letter-spacing;
 }
+
 #header .nav-list ul li:hover a::after {
   transform: translate(-50%, -50%) scale(1);
   letter-spacing: initial;
 }
+
 #header .nav-list ul li:hover a {
   color: #ff0000;
 }
+
 #header .hamburger {
   height: 60px;
   width: 60px;
@@ -174,6 +193,7 @@ p {
   transform: scale(0.8);
   margin-right: 20px;
 }
+
 #header .hamburger:after {
   position: absolute;
   content: "";
@@ -183,6 +203,7 @@ p {
   border: 3px solid white;
   animation: hamburger_puls 1s ease infinite;
 }
+
 #header .hamburger .bar {
   height: 2px;
   width: 30px;
@@ -190,6 +211,7 @@ p {
   background-color: white;
   z-index: -1;
 }
+
 #header .hamburger .bar::after,
 #header .hamburger .bar::before {
   content: "";
@@ -201,29 +223,33 @@ p {
   transition: 0.3s ease;
   transition-property: top, bottom;
 }
+
 #header .hamburger .bar::after {
   top: 8px;
 }
+
 #header .hamburger .bar::before {
   bottom: 8px;
 }
+
 #header .hamburger.active .bar::before {
   bottom: 0;
 }
+
 #header .hamburger.active .bar::after {
   top: 0;
 }
-/* End Header section */
 
-/* Hero Section */
-#hero {
-  background-image: url(../img/hero.jpg);
+/* SHOWCASE */
+#showcase {
+  background-image: url(../img/showcase.jpg);
   background-size: cover;
   background-position: top center;
   position: relative;
   z-index: 1;
 }
-#hero::after {
+
+#showcase::after {
   content: "";
   position: absolute;
   left: 0;
@@ -234,13 +260,15 @@ p {
   opacity: 0.7;
   z-index: -1;
 }
-#hero .hero {
+
+#showcase .showcase {
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 50px;
   justify-content: flex-start;
 }
-#hero h1 {
+
+#showcase h1 {
   display: block;
   width: fit-content;
   font-size: 4rem;
@@ -249,17 +277,21 @@ p {
   animation: text_reveal 0.5s ease forwards;
   animation-delay: 0.5s;
 }
-#hero h1:nth-child(1) {
+
+#showcase h1:nth-child(1) {
   animation-delay: 0.5s;
 }
-#hero h1:nth-child(2) {
+
+#showcase h1:nth-child(2) {
   animation-delay: 0.75s;
 }
-#hero h1:nth-child(3) {
+
+#showcase h1:nth-child(3) {
   animation: text_reveal_name 0.5s ease forwards;
   animation-delay: 1s;
 }
-#hero h1 span {
+
+#showcase h1 span {
   position: absolute;
   top: 0;
   left: 0;
@@ -269,17 +301,18 @@ p {
   animation: text_reveal_box 0.3s ease;
   animation-delay: 0.3s;
 }
-#hero h1:nth-child(1) span {
+
+#showcase h1:nth-child(1) span {
   animation-delay: 0.3s;
 }
-#hero h1:nth-child(2) span {
+
+#showcase h1:nth-child(2) span {
   animation-delay: 0.5s;
 }
-#hero h1:nth-child(3) span {
+
+#showcase h1:nth-child(3) span {
   animation-delay: 1s;
 }
-
-/* End Hero Section */
 
 /* CONTENTS */
 #contents .contents {
@@ -289,10 +322,12 @@ p {
   margin: 0 auto;
   padding: 100px 0;
 }
+
 #contents .content-top {
   max-width: 500px;
   margin: 0 auto;
 }
+
 #contents .content-bottom {
   display: flex;
   align-items: center;
@@ -300,6 +335,7 @@ p {
   flex-wrap: wrap;
   margin-top: 50px;
 }
+
 #contents .content-item {
   flex-basis: 80%;
   display: flex;
@@ -315,6 +351,7 @@ p {
   z-index: 1;
   overflow: hidden;
 }
+
 #contents .content-item::after {
   content: "";
   position: absolute;
@@ -326,11 +363,13 @@ p {
   opacity: 0.9;
   z-index: -1;
 }
+
 #contents .content-bottom .icon {
   height: 80px;
   width: 80px;
   margin-bottom: 20px;
 }
+
 #contents .content-item h2 {
   font-size: 2rem;
   color: white;
@@ -342,22 +381,25 @@ p {
   text-align: left;
 }
 
-/* Projects section */
+/* PROJECTS */
 #projects .projects {
   flex-direction: column;
   max-width: 1200px;
   margin: 0 auto;
   padding: 100px 0;
 }
+
 #projects .projects-header h1 {
   margin-bottom: 50px;
 }
+
 #projects .all-projects {
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
+
 #projects .project-item {
   display: flex;
   align-items: center;
@@ -368,6 +410,7 @@ p {
   overflow: hidden;
   border-radius: 10px;
 }
+
 #projects .project-info {
   padding: 30px;
   flex-basis: 50%;
@@ -379,24 +422,29 @@ p {
   background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
   color: white;
 }
+
 #projects .project-info h1 {
   font-size: 4rem;
   font-weight: 500;
 }
+
 #projects .project-info h2 {
   font-size: 1.8rem;
   font-weight: 500;
   margin-top: 10px;
 }
+
 #projects .project-info p {
   color: white;
 }
+
 #projects .project-img {
   flex-basis: 50%;
   height: 300px;
   overflow: hidden;
   position: relative;
 }
+
 #projects .project-img:after {
   content: "";
   position: absolute;
@@ -407,9 +455,11 @@ p {
   /* background-image: linear-gradient(60deg, #29323c 0%, #485563 100%); */
   opacity: 0.7;
 }
+
 #projects .project-img img {
   transition: 0.3s ease transform;
 }
+
 #projects .project-item:hover .project-img img {
   transform: scale(1.1);
 }
@@ -422,9 +472,8 @@ p {
   font-weight: bold;
   font-size: 1.5em;
 }
-/* End Projects section */
 
-/* About Section */
+/* ABOUT */
 #about .about {
   flex-direction: column-reverse;
   text-align: center;
@@ -432,34 +481,45 @@ p {
   margin: 0 auto;
   padding: 100px 20px;
 }
+
 #about .col-left {
   width: 250px;
   height: 360px;
 }
+
 #about .col-right {
   width: 100%;
 }
+
 #about .col-right h2 {
   font-size: 1.8rem;
   font-weight: 500;
   letter-spacing: 0.2rem;
   margin-bottom: 10px;
 }
+
 #about .col-right p {
   margin-bottom: 20px;
 }
+
 #about .col-right .cta {
   color: black;
   margin-bottom: 50px;
   padding: 10px 20px;
   font-size: 2rem;
 }
+
+#about .col-right .cta:hover {
+  color: #fff;
+}
+
 #about .col-left .about-img {
   height: 100%;
   width: 100%;
   position: relative;
   border: 10px solid white;
 }
+
 #about .col-left .about-img::after {
   content: "";
   position: absolute;
@@ -470,19 +530,19 @@ p {
   border: 7px solid #ff0000;
   z-index: -1;
 }
-/* End About Section */
 
-/* contact Section */
+/* CONTACT */
 #contact .contact {
   flex-direction: column;
   max-width: 1200px;
   margin: 0 auto;
   width: 90%;
 }
+
 #contact .contact-items {
-  /* max-width: 400px; */
   width: 100%;
 }
+
 #contact .contact-item {
   width: 80%;
   padding: 20px;
@@ -497,36 +557,41 @@ p {
   box-shadow: 0px 0px 18px 0 #0000002c;
   transition: 0.3s ease box-shadow;
 }
+
 #contact .contact-item:hover {
   box-shadow: 0px 0px 5px 0 #0000002c;
 }
+
 #contact .icon {
   width: 70px;
   margin: 0 auto;
   margin-bottom: 10px;
 }
+
 #contact .contact-info h1 {
   font-size: 2.5rem;
   font-weight: 500;
   margin-bottom: 5px;
 }
+
 #contact .contact-info h2 {
   font-size: 1.3rem;
   line-height: 2rem;
   font-weight: 500;
 }
-/*End contact Section */
 
-/* Footer */
+/* FOOTER */
 #footer {
   background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 }
+
 #footer .footer {
   min-height: 200px;
   flex-direction: column;
   padding-top: 50px;
   padding-bottom: 10px;
 }
+
 #footer h2 {
   color: white;
   font-weight: 500;
@@ -535,29 +600,33 @@ p {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
 #footer .social-icon {
   display: flex;
   margin-bottom: 30px;
 }
+
 #footer .social-item {
   height: 50px;
   width: 50px;
   margin: 0 5px;
 }
+
 #footer .social-item img {
   filter: grayscale(1);
   transition: 0.3s ease filter;
 }
+
 #footer .social-item:hover img {
   filter: grayscale(0);
 }
+
 #footer p {
   color: white;
   font-size: 1.3rem;
 }
-/* End Footer */
 
-/* Keyframes */
+/* KEYFRAMES */
 @keyframes hamburger_puls {
   0% {
     opacity: 1;
@@ -568,6 +637,7 @@ p {
     transform: scale(1.4);
   }
 }
+
 @keyframes text_reveal_box {
   50% {
     width: 100%;
@@ -578,72 +648,77 @@ p {
     left: 100%;
   }
 }
+
 @keyframes text_reveal {
   100% {
     color: white;
   }
 }
+
 @keyframes text_reveal_name {
   100% {
     color: #ff0000;
     font-weight: 500;
   }
 }
-/* End Keyframes */
 
-/* Media Query For Tablet */
+/* MQ FOR TABLET */
 @media only screen and (min-width: 768px) {
   .cta {
     font-size: 2.5rem;
     padding: 20px 60px;
   }
+
   h1.section-title {
     font-size: 6rem;
   }
 
-  /* Hero */
-  #hero h1 {
+  #showcase h1 {
     font-size: 7rem;
   }
-  /* End Hero */
 
-  /* contents Section */
   #contents .content-bottom .content-item {
     flex-basis: 45%;
     margin: 2.5%;
   }
-  /* End contents Section */
 
-  /* Project */
+  #contents .content-item i {
+    color: #fff;
+  }
+
   #projects .project-item {
     flex-direction: row;
   }
+
   #projects .project-item:nth-child(even) {
     flex-direction: row-reverse;
   }
+
   #projects .project-item {
     height: 400px;
     margin: 0;
     width: 100%;
     border-radius: 0;
   }
+
   #projects .all-projects .project-info {
     height: 100%;
   }
+
   #projects .all-projects .project-img {
     height: 100%;
   }
-  /* End Project */
 
-  /* About */
   #about .about {
     flex-direction: row;
   }
+
   #about .col-left {
     width: 600px;
     height: 400px;
     padding-left: 60px;
   }
+
   #about .about .col-left .about-img::after {
     left: -45px;
     top: 34px;
@@ -651,16 +726,16 @@ p {
     width: 98%;
     border: 10px solid #ff0000;
   }
+
   #about .col-right {
     text-align: left;
     padding: 30px;
   }
+
   #about .col-right h1 {
     text-align: left;
   }
-  /* End About */
 
-  /* contact  */
   #contact .contact {
     flex-direction: column;
     padding: 100px 0;
@@ -668,6 +743,7 @@ p {
     justify-content: center;
     min-width: 20vh;
   }
+
   #contact .contact-items {
     width: 100%;
     display: flex;
@@ -675,11 +751,13 @@ p {
     justify-content: space-evenly;
     margin: 0;
   }
+
   #contact .contact-item {
     width: 30%;
     margin: 0;
     flex-direction: row;
   }
+
   #contact .contact-item .icon {
     height: 100px;
     width: 100px;
@@ -687,21 +765,20 @@ p {
   #contact .contact-item .icon img {
     object-fit: contain;
   }
+
   #contact .contact-item .contact-info {
     width: 100%;
     text-align: left;
     padding-left: 20px;
   }
-  /* End contact  */
 }
-/* End Media Query For Tablet */
 
-/* Media Query For Desktop */
+/* MQ FOR DESKTOP */
 @media only screen and (min-width: 1200px) {
-  /* header */
   #header .hamburger {
     display: none;
   }
+
   #header .nav-list ul {
     position: initial;
     display: block;
@@ -709,20 +786,20 @@ p {
     width: fit-content;
     background-color: transparent;
   }
+
   #header .nav-list ul li {
     display: inline-block;
   }
+
   #header .nav-list ul li a {
     font-size: 1.8rem;
   }
   #header .nav-list ul a:after {
     display: none;
   }
-  /* End header */
 
   #contents .content-bottom .content-item {
     flex-basis: 22%;
     margin: 1.5%;
   }
 }
-/* End  Media Query For Desktop */
