--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ p {
 .cta:hover,
 .cta-2:hover {
   color: white;
-  background-color: #000080;
+  background-color: #0d0035;
 }
 
 .cta-2 {
@@ -77,7 +77,7 @@ p {
   padding: 7px 20px;
   color: white;
   background-color: transparent;
-  border: 2px solid #ff0000;
+  border: 2px solid #0d0035;
   border-radius: 7px;
   font-size: 1rem;
   text-transform: uppercase;
@@ -106,6 +106,7 @@ p {
   top: 0;
   width: 100vw;
   height: auto;
+  font-family: "Oswald", sans-serif;
 }
 
 #header .header {
@@ -268,7 +269,7 @@ p {
   justify-content: flex-start;
 }
 
-#showcase h1 {
+#showcase h2 {
   display: block;
   width: fit-content;
   font-size: 4rem;
@@ -278,20 +279,21 @@ p {
   animation-delay: 0.5s;
 }
 
-#showcase h1:nth-child(1) {
+#showcase h2:nth-child(1) {
+  animation: text_reveal_name 0.5s ease forwards;
   animation-delay: 0.5s;
+  font-family: "Oswald", sans-serif;
 }
 
-#showcase h1:nth-child(2) {
+#showcase h2:nth-child(2) {
   animation-delay: 0.75s;
 }
 
-#showcase h1:nth-child(3) {
-  animation: text_reveal_name 0.5s ease forwards;
+#showcase h2:nth-child(3) {
   animation-delay: 1s;
 }
 
-#showcase h1 span {
+#showcase h2 span {
   position: absolute;
   top: 0;
   left: 0;
@@ -302,15 +304,15 @@ p {
   animation-delay: 0.3s;
 }
 
-#showcase h1:nth-child(1) span {
+#showcase h2:nth-child(1) span {
   animation-delay: 0.3s;
 }
 
-#showcase h1:nth-child(2) span {
+#showcase h2:nth-child(2) span {
   animation-delay: 0.5s;
 }
 
-#showcase h1:nth-child(3) span {
+#showcase h2:nth-child(3) span {
   animation-delay: 1s;
 }
 
